287		A little starting money
288		Owned provinces get a level one fort
289		Starting agents for ROTW countries
290		Fix for change 288
291		Cores for ROTW provinces
292		Natives
293		Trailing slash in CK2 and EU3 locations now acceptable
294		Avoid some potential crashes from CK2 installs that don't match the save version
295		Use the global heresy check to determine whether the province heresy flag should be set.
296		Make province output match EU3 save output more closely.
297		More output order matching.
298		Still assign a primary title, even if the save doesn't define one
299		Output the HRE Emperor
300		Rename CK2+ readme file
301		Log when government gets default conversion
302		EU3 vassals never have vassals
303		Juniors in a PU never have vassals
304		Update readme for converter mod
305		Added tag 0.6 Release for changeset 9489bf5e37c5
306		Incorporate years_ruled opinion modifier
307		HRE Electors
308		Add Jerusalem1401 save (from 1.09)
309		Better warning message when unable to determine culture or religion.
310		Fix crash bug from HRE title being destroyed
311		Fix resaving bug
312		Process many things only after assigning tags
313		Solve some cases of governments not being assigned
314		More government adjustments
315		Ultimogeniture succession
316		Tanistry succession
317		Merge in minor features
318		Merge in bugfixes
319
320
321
322
323
324
325
326
327
328
329
330
331
332
333
334
335		Initial army conversion
336		Army position and movement
337
338		Properly handle when armies are in provinces that do not map to EU3
339
340		Proper regiment types and number
341		Convert army troop strength
342		Correct unit types
343		Manpower from unraised levies
344		Regiment homes and names
345		Minor improvements from forum
		'Leftover' men from subunits applied to manpower
346		Readme file updates
347
348		Convert raised navies
349		Convert transported armies
350		Ships from unraised ships
351		Fix bug with manpower sometimes being FUBAR